--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metaplex/js": "^4.12.0",
     "@solana/wallet-adapter-base": "^0.9.3",
     "@solana/wallet-adapter-react": "^0.15.3",
     "@solana/wallet-adapter-react-ui": "^0.9.5",
     "@solana/wallet-adapter-wallets": "^0.15.4",
     "@solana/web3.js": "^1.34.0",
+    "@types/bs58": "^4.0.1",
+    "borsh": "^0.7.0",
+    "bs58": "^4.0.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
