--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bs58": "^4.0.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.17",
